# rag-advance

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
configs/: finance_metric_ontology.yaml
docs/: README.md
docs/Design-docs/: 00_ATLAS_OVERVIEW.md  00_overview.md  01_V1_ADVANCED_HYBRID_KERNEL.md  01_v0_atlas_kernel.md  02_V2_RESEARCH_RUNTIME.md  02_v1_atlas_hybrid_kernel.md  03_V3_GRAPH_CONTEXT.md  03_v2_atlas_research_runtime.md  04_V4_STRUCTURED_DATA_CONTEXT.md  04_future_versions.md  05_V5_STREAMING_INGESTION.md  (+2 more)
evals/: financebench_cases.yaml  smoke_cases.yaml  v0_cases.yaml
samples/: atlas_notes.txt  demo_knowledge.md  v1_evidence_kernel.md
scripts/: ingest_financebench.py  prepare_financebench.py  tri_provider_acceptance.py
tests/: test_async_runtime_facade.py  test_backend_registry.py  test_evidence_evaluator_citation_verifier.py  test_evidence_pack_builder.py  test_graph_fixture_loader.py  test_graph_grounding.py  test_graph_provider.py  test_graph_store.py  test_ingestion_registry.py  test_llm_adapter.py  test_provider_router_contract.py  test_qdrant_metadata_filters.py  test_query_orchestrator.py  test_reranker_contract.py  test_retrieval_plan_task.py  test_sql_provider_v1.py  test_text_hybrid_provider.py  test_tri_provider_live_acceptance.py  test_v1_contracts.py  test_v1_full_eval.py  test_v1_hybrid_provider_reset_benchmark.py  test_v1_trace_api.py  test_v4_contracts.py  test_v4_csv_chunking_contract.py  test_v4_ingestion_phase1.py  test_v4_service_writer_integration.py  test_v4_writer.py  test_weighted_rrf.py
(+159 files in other folders)
