[project]
name = "atlas-rag-kernel"
version = "0.0.1"
description = "Atlas V1 Evidence Kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.11.0",
  "sentence-transformers>=3.0.0",
  "datasets>=3.0.0",
  "fastembed>=0.8.0",
  "openai>=1.66.0",
  "pypdf>=5.0.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"
